changing classes and id's

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </p2>
 
       <p3 class="introducton" , id="p3">
-        with learning how to code you can become a computer programmer and a business intelligence analyst ect.</p3
+        With learning how to code you can become a computer programmer and a business intelligence analyst ect.</p3
       >
 
       <p4 class="introduction" ,id ="p4">
